# sqlite-ai-agent

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  shop_database.db
app/: agent.py  db.py  main.py  schemas.py  tools.py
app/static/: app.js  style.css
app/templates/: index.html
